@@ -1,3 +1,8 @@
+2006-04-09  Eyal Alaluf  <eyala@mainsoft.com>
+    * Mono.Cecil/ReflectionReader.cs
+	    Cannot assume that TypeRefs are ordered is such a way that an outer
+		class index comes always before all its inner classes.
+
 2006-04-06  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs
